# flackup

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
flackup/: cli.py  convert.py  fileinfo.py  main.py  main_analyze.py  metadata.py  musicbrainz.py
src/flackup/: __init__.py  cli.py
tests/: test_cli.py  test_convert.py  test_fileinfo.py  test_metadata.py  test_musicbrainz.py
tests/test_convert/: date_original.flac  tagged.flac
tests/test_fileinfo/: empty.flac  tagged.flac
tests/test_metadata/: test.flac
