[metadata]
name = flackup
version = attr: flackup.VERSION
author = Alexander Dietrich
author_email = alexander@dietrich.cx
description = FLAC CD Backup Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alxndr42/flackup
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Multimedia :: Sound/Audio :: CD Audio
    Topic :: Multimedia :: Sound/Audio :: Conversion

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click ~= 8.0
    musicbrainzngs ~= 0.7
    mutagen ~= 1.45
    pillow ~= 9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flackup = flackup.cli:flackup
